exports[`ForgotPasswordReset should display the password mismatch error message when passwords are mismatched 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Reset Password
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <ScrollView>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          Token
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          label="Token"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password
        </Text>
        <TextInput
          label="New Password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="foo" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password Again
        </Text>
        <TextInput
          label="New Password Again"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="f" />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#d30000",
              "fontSize": 14,
              "marginTop": -20,
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "textAlign": "left",
            },
          ]
        }>
        Passwords don\'t match
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "#f77040",
            },
            undefined,
            undefined,
            Array [
              Object {
                "backgroundColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#ffffff",
                },
                undefined,
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          RESET
        </Text>
      </View>
    </ScrollView>
  </View>
</View>
`;

exports[`ForgotPasswordReset should not display the password mismatch error message when passwords are matched 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Reset Password
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <ScrollView>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          Token
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          label="Token"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password
        </Text>
        <TextInput
          label="New Password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="foo" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password Again
        </Text>
        <TextInput
          label="New Password Again"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="foo" />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "#f77040",
            },
            undefined,
            undefined,
            Array [
              Object {
                "backgroundColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#ffffff",
                },
                undefined,
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          RESET
        </Text>
      </View>
    </ScrollView>
  </View>
</View>
`;

exports[`ForgotPasswordReset should render 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Reset Password
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <ScrollView>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          Token
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          label="Token"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password
        </Text>
        <TextInput
          label="New Password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password Again
        </Text>
        <TextInput
          label="New Password Again"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "#f77040",
            },
            undefined,
            undefined,
            Array [
              Object {
                "backgroundColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#ffffff",
                },
                undefined,
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          RESET
        </Text>
      </View>
    </ScrollView>
  </View>
</View>
`;

exports[`ForgotPasswordReset should render as busy when status is busy 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Reset Password
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <ScrollView>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          Token
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          label="Token"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password
        </Text>
        <TextInput
          label="New Password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password Again
        </Text>
        <TextInput
          label="New Password Again"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "#f77040",
              },
              undefined,
              undefined,
              false,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  undefined,
                  false,
                ],
              ]
            }>
            RESETTING
          </Text>
        </View>
      </TouchableNativeFeedback>
    </ScrollView>
  </View>
</View>
`;

exports[`ForgotPasswordReset should render password token error 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
        undefined,
      ]
    }>
    <View
      style={
        Array [
          Object {
            "height": 72,
            "justifyContent": "center",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {},
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
          ]
        }>
        Reset Password
      </Text>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "top": 24,
              },
              Object {},
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </View>
      </TouchableNativeFeedback>
    </View>
    <ScrollView>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          Token
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          label="Token"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#d30000",
              "fontSize": 14,
              "marginTop": -20,
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "textAlign": "left",
            },
          ]
        }>
        Reset code is incorrect, please check your email
      </Text>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password
        </Text>
        <TextInput
          label="New Password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#dfe5e6",
              "marginBottom": 27,
              "marginLeft": 24,
              "marginRight": 24,
            },
            false,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          New Password Again
        </Text>
        <TextInput
          label="New Password Again"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#c0cbcc"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 18,
                "marginBottom": 8,
                "padding": 0,
              },
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value="" />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "#f77040",
            },
            undefined,
            undefined,
            Array [
              Object {
                "backgroundColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#ffffff",
                },
                undefined,
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          RESET
        </Text>
      </View>
    </ScrollView>
  </View>
</View>
`;
